Repository Structure fix

--- a/Parallex/Parallex.html
+++ b/Parallex/Parallex.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./../Css/Parallex.css">
+    <link rel="stylesheet" href="./Parallex.css">
     <link rel="stylesheet" href="./../Css/CommonStyles.css">
 </head>
 
@@ -14,8 +14,8 @@
     <div class="wrapper">
         <header>
             <!-- <img src="./../Images/Mountain - 1900x784.png" class="background"> -->
-            <img src="./../Images/Huge House by the Green Mountains - Canada - 736x1103.png" class="background">
-            <img src="./../Images/Building in Russia - 1920x1080.png" class="foreground">
+            <img src="./Images/Mountain - 1900x784.png" class="background">
+            <img src="./Images/Building in Russia - 1920x1080.png" class="foreground">
             <h1 class="title">Welcome!</h1>
         </header>
         <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse facilis unde illo neque at hic quisquam,
