Index image Updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="d-flex flex-column align-items-center justify-content-center">
             <a href="./Parallex/Parallex.html" class="align-self-start">Parallex</a>
             <span class="display-1 pb-5 app-drop-shadow " >I am working on it ...</span>
-            <img class="app-drop-shadow " src="./Images/bitmoji sleeping.png" alt="Image Unavailable">
+            <img class="app-drop-shadow " src="./Images/Working Bitmoji.png" alt="Image Unavailable">
         </div>        
     </div>
 
