--- a/Parallex/index.html
+++ b/Parallex/index.html
@@ -14,9 +14,9 @@
     <div class="wrapper">
         <header>
             <!-- <img src="./../Images/Mountain - 1900x784.png" class="background"> -->
-            <img src="./Images/Mountain - 1900x784.png" class="background">
+            <img src="./Images/Mountain - 1900x784.png" class="background app-drop-shadow">
             <img src="./Images/Building in Russia - 1920x1080.png" class="foreground">
-            <h1 class="title">Welcome!</h1>
+            <span class="title">Parallax</span>
         </header>
         <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse facilis unde illo neque at hic quisquam,
             nulla consectetur, itaque maxime sit iusto aliquam culpa reiciendis eaque recusandae vitae modi, animi
