--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="./Images/fevicon.png">
     <link rel="stylesheet" href="./Css/CommonStyles.css">
     <link rel="stylesheet" href="./Css/index.css">
     <title>Danish's Index</title>
