--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="screen-center">
         
-        <div class="d-flex flex-column align-items-center justify-content-center">
+        <div class=" main d-flex flex-column align-items-center justify-content-center">
             <span class="display-1 pb-5 app-drop-shadow " onclick="showRough()">I am working on it ...</span>
             <img class="app-drop-shadow " src="./Images/Working Bitmoji.png" alt="Image Unavailable">
         </div> 
@@ -25,6 +25,7 @@
             <iframe src="./Parallex/index.html" title="Paralex" class="link-frame"></iframe>
             <a href="./Parallex/" class="link align-self-center app-drop-shadow"><button class="">>>></button></a>
         </div>
+
          
     </div>
 
