Created link in html for audio
also update audio player title

--- a/Audio Tests/index.html
+++ b/Audio Tests/index.html
@@ -5,7 +5,7 @@
           <meta charset="utf-8" />
           <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-          <title>Hello, world!</title>
+          <title>Danish's Playlist</title>
           <link rel="stylesheet" href="./../Css/CommonStyles.css" />
           <link rel="stylesheet" href="./css/audioTest.css"/>
           <meta name="google" content="notranslate" />
