--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Index css -->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./Css/index.css">
     <!-- Font Awsome v5.8 css -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -21,7 +21,7 @@
     <!-- font aesome v4.7 css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="icon" type="image/x-icon" href="./images/favicon2.png">
+    <link rel="icon" type="image/x-icon" href="./Images/favicon2.png">
 
 </head>
 
