--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="home-page-element pic col">
                             <div class="center-content">
                                 <div class="img-container">
-                                    <img class="mx-auto" src="./images/My Pic.png" alt="">
+                                    <img class="mx-auto" src="./Images/My Pic.png" alt="">
                                 </div>
                             </div>
                         </div>
