--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
                     <div class="font-larger fw-normal align-self-start fw-bold white-space-nowrap pb-5 ms-5">Know more
                         about
                         me :</div>
-                    <div class="d-flex justify-content-between mx-5">
-                        <button class="btn btn-outline-dark bg-gradient fw-bold w-25"
+                    <div class="d-flex justify-content-between mx-5 flex-column flex-lg-row gap-3 ">
+                        <button class="btn btn-outline-dark bg-gradient fw-bold col-lg-3 "
                             onclick="window.open('https://www.linkedin.com/in/danish-javed-ba0158184/')">
                             <i class="fa fa-linkedin-square font-larger"></i> Linked-In
                         </button>
 
-                        <button class="btn btn-outline-dark bg-gradient fw-bold w-25"
+                        <button class="btn btn-outline-dark bg-gradient fw-bold col-lg-3"
                             onclick="window.open('https://stackoverflow.com/users/11842836/danish-javed')">
                             <i class="fa fa-stack-overflow font-larger"></i> StackOverflow
                         </button>
-                        <button class="btn btn-outline-dark bg-gradient fw-bold w-25"
+                        <button class="btn btn-outline-dark bg-gradient fw-bold col-lg-3"
                             onclick="window.open('https://github.com/danjaved')">
                             <i class="fa fa-github font-larger"></i> Github </button>
                     </div>
