--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="icon" type="image/x-icon" href="./Images/favicon2.png">
-
+    <script src="./Js/index.js"></script>
 </head>
 
-<body>
+<body class="background-color-change">
     <div class="home-page-layout d-flex flex-wrap">
         <div class="home-page-element intro w-100">
             <div class="display-3">Hi, I'm <span class="display-1 text-danger font-dancing-script">Danish</span>.</div>
@@ -46,10 +46,10 @@
                         </div>
                     </td>
                     <td rowspan="2">
-                        <div class="home-page-element pic col">
+                        <div class="home-page-element pic col d-none d-lg-block">
                             <div class="center-content">
                                 <div class="img-container">
-                                    <img class="mx-auto" src="./Images/My Pic.png" alt="">
+                                    <img class="mx-auto" onclick="toogleMode()" src="./Images/My Pic.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -66,10 +66,10 @@
                                 <div class="col">
                                     <ul>
                                         <li><i class='fab fa-java font-larger text-shadow-large'></i> Java</li>
-                                        <li><i class="fa fa-leaf"></i> Springboot (Beginner)</li>
+                                        <li><i class="fa fa-leaf"></i><sapn class="fs-4"> Springboot</sapn>  <span class="d-none d-lg-inline">(Beginner)</span></li>
                                         <li><i class="fab fa-js"></i> Javascript</li>
-                                        <li> <i class="fab fa-react text-shadow-large"></i> React (Beginner)</li>
-                                        <li> <i class="fab fa-angular"></i> Angular (Basic)</li>
+                                        <li> <i class="fab fa-react text-shadow-large"></i> React <span class="d-none d-lg-inline">(Beginner)</span></li>
+                                        <li> <i class="fab fa-angular"></i> Angular <span class="d-none d-lg-inline">(Basic)</span></li>
                                     </ul>
                                 </div>
                                 <div class="col">
@@ -77,7 +77,7 @@
                                         <li><i class="fab fa-html5"></i> Html</li>
                                         <li><i class="fab fa-css3"></i> CSS</li>
                                         <li> <i class="fab fa-bootstrap"></i> Bootstrap</li>
-                                        <li><i class="fa fa-database"></i> SQL (Basic)</li>
+                                        <li><i class="fa fa-database"></i> SQL <span class="d-none d-lg-inline">(Basic)</span></li>
                                     </ul>
                                 </div>
                             </div>
