Dark mode update

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div id="main-contents" class="home-page-layout d-flex flex-wrap mt-5 mt-lg-0">
         <div class="home-page-element intro w-100 ">
             <div class="display-3 w-100">Hi, I'm <span class="display-1 red-text font-dancing-script">Danish </span>.
-            <span class="fs-1 float-end ">
-                <label for="themeToggler">
+            <span class="fs-1 float-end">
+                <label for="themeToggler" class="cursor-pointer">
                     <i id="lightThemeIcon" class="far fa-sun text-light d-none "></i>
                     <input type="checkbox" class="d-none" id="themeToggler" title="themeToggler" onchange="toogleMode()">
                     <i id="darkThemeIcon" class="fas fa-moon d-inline"></i>
@@ -55,7 +55,7 @@
                         </div>
                     </td>
                     <td rowspan="2">
-                        <div class="home-page-element pic col d-none d-md-block d-lg-block">
+                        <div class="home-page-element pic col d-none d-md-block d-lg-block ">
                             <div class="center-content">
                                 <div class="img-container">
                                     <img class="mx-auto" src="./Images/My Pic.png" alt="">
@@ -77,8 +77,8 @@
                                         <li><i class='fab fa-java font-larger text-shadow-large'></i> Java</li>
                                         <li><i class="fa fa-leaf"></i><sapn class="fs-4"> Springboot</sapn>  <span class="d-none d-lg-inline">(Beginner)</span></li>
                                         <li><i class="fab fa-js"></i> Javascript</li>
-                                        <li> <i class="fab fa-react text-shadow-large"></i> React <span class="d-none d-lg-inline">(Beginner)</span></li>
-                                        <li> <i class="fab fa-angular"></i> Angular <span class="d-none d-lg-inline">(Basic)</span></li>
+                                        <li> <i class="fab fa-react "></i> React <span class="d-none d-lg-inline">(Beginner)</span></li>
+                                        <li> <i class="fab fa-angular text-shadow-large"></i> Angular <span class="d-none d-lg-inline">(Basic)</span></li>
                                     </ul>
                                 </div>
                                 <div class="col">
