--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="">
    
-    <div id="main-contents" class="home-page-layout d-flex flex-wrap mt-5 mt-lg-0">
+    <div id="main-contents" class="home-page-layout d-flex flex-wrap mt-5 mt-lg-0 d-none">
         <div class="home-page-element intro w-100 ">
             <div class="display-3 w-100">Hi, I'm <span class="display-1 red-text font-dancing-script">Danish </span>.
             <span class="fs-1 float-end">
@@ -134,6 +134,7 @@
         </div>
     </div>
 
+    <h1>YUP</h1>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
