--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
 <body>  
 
-    <div class="vh-100 text-white d-flex justify-content-center align-items-center">
+    <div class="vh-100 text-white container d-flex justify-content-center align-items-center">
         <div class="main-content d-flex flex-column gap-3">
-            <div class="display-3">Hi, I am <span class="text-accent-color">Danish</span>.</div>
-            <div class="fs-3">I'm glad you found me <span class="text-accent-color">intresting</span> .</div>
+            <div class="display-3 fw-semibold">Hi, I am <span class="text-accent-color">Danish</span>,</div>
+            <div class="fs-3">really glad you found me <span class="text-accent-color">intresting</span> .</div>
             <div class="w-100">
                 <a class="btn w-100" href="https://danjaved.github.io/portfolio/"> 
-                <i class="fa-solid fa-up-right-from-square me-2"></i> Check my portfolio here 
+                <i class="fa-solid fa-up-right-from-square me-2"></i> Check out my portfolio here 
                 </a>
             </div>
         </div>
