--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="display-3 fw-semibold">Hi, I am <span class="text-accent-color">Danish</span>,</div>
             <div class="fs-3">really glad you found me <span class="text-accent-color">intresting</span> .</div>
             <div class="w-100">
-                <a class="btn w-100" href="https:https://dev-danish-javed.github.io/portfolio_2/"> 
+                <a class="btn w-100" href="portfolio_2/"> 
                 <i class="fa-solid fa-up-right-from-square me-2"></i> Check out my portfolio here 
                 </a>
             </div>
