--- a/index.html
+++ b/index.html
@@ -7,50 +7,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Danish Javed</title>
-
+    <link rel="stylesheet" href="./index.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-        <!-- font aesome v4.7 css -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-            integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- font aesome v4.7 css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="icon" type="image/x-icon" href="./Images/favico.png">
-
-    <style>  
-    body{
-        background-color: rgb(0, 10, 9);
-    }      
-        a{
-            color:turquoise !important;
-            border: 2px solid turquoise !important;
-            text-transform: capitalize;
-        }
-        a:hover{
-            background-color: turquoise!important;
-            color:black !important;
-            font-weight: 500;
-        }
-        .text-accent-color{
-            color: turquoise;
-        }
-    </style>
-
+    <script src="https://kit.fontawesome.com/e75d46d23e.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ysabeau+SC&display=swap" rel="stylesheet">
 </head>
 
-<body>  
+<body>
 
-    <div class="vh-100 text-white container d-flex justify-content-center align-items-center">
-        <div class="main-content d-flex flex-column gap-3">
-            <div class="display-3 fw-semibold">Hi, I am <span class="text-accent-color">Danish</span>,</div>
-            <div class="fs-3">really glad you found me <span class="text-accent-color">intresting</span> .</div>
-            <div class="w-100">
-                <a class="btn w-100" href="portfolio_2/"> 
-                <i class="fa-solid fa-up-right-from-square me-2"></i> Check out my portfolio here 
-                </a>
+    <div class="vh-100 d-flex justify-content-center align-items-center overflow-hidden">
+        <div class="main-content d-flex flex-column gap-3 position-absolute ">
+            <div class="profile-card bg-gradient h-100 text-center rounded rounded-3 d-flex flex-column
+                justify-content-between border border-dark">
+
+                <div class="name text-nowrap text-truncate">Danish Javed</div>
+                <div class="fs-5">Java Full Stack Developer | 2.5 yrs</div>
+                
+                <div class="d-flex justify-content-center gap-4 py-2 fs-5 socials mt-3">
+                    <a href="https://www.linkedin.com/in/mr-danish/" title="LinkedIn" target="blank"
+                        rel="noreferrer">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/dev-danish-javed" title="Github" target="blank" rel="noreferrer">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="mailto:danishjaved636@gmail.com" title="Github" target="blank" rel="noreferrer">
+                        <i class="fa-solid fa-envelope"></i>
+                    </a>
+                    <a href="https://www.hackerrank.com/Danish_Javed" title="HackerRank" target="blank"
+                        rel="noreferrer">
+                        <i class="fa-brands fa-hackerrank"></i>
+                    </a>
+                    <a href="https://www.instagram.com/full_stack_danish/" title="Stackoverflow" target="blank"
+                        rel="noreferrer">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </div>
+                <div class="d-flex flex-column flex-md-row align-items-center justify-content-around border-top border-secondary py-1 mt-1 bg-gradient">
+                    <a class=" text-decoration-none text-dark pointer-event"
+                        href='./docs/Danish Javed Resume.pdf' download="Danish Javed Resume">
+                        Download Resume <i class="fa-solid fa-download"></i>
+                    </a>
+
+                    <a class="fw-bold2 text-decoration-none text-dark pointer-event fs-5"
+                        href=' https://dev-danish-javed.github.io/portfolio_2/' target="blank" rel="noreferrer">
+                        Checkout My Portfolio <i class="fa-solid fa-up-right-from-square"></i>
+                    </a>
+                </div>
             </div>
+        </div>
+        <div class="bg-bubbles vh-100 w-100">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </div>
 
