--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <!-- font aesome v4.7 css -->
+    <!-- font awesome v4.7 css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -55,12 +55,9 @@
                     </a>
                 </div>
                 <div class="d-flex flex-column flex-md-row align-items-center justify-content-around border-top border-secondary py-1 mt-1 bg-gradient">
-                    <a class=" text-decoration-none text-dark pointer-event"
-                        href='./docs/Danish Javed Resume.pdf' download="Danish Javed Resume">
-                        Download Resume <i class="fa-solid fa-download"></i>
-                    </a>
+                    
 
-                    <a class="fw-bold2 text-decoration-none text-dark pointer-event fs-5"
+                    <a class="fw-bold2 text-decoration-none text-dark pointer-event fs-6 fw-semibold w-100 bg-gradient shadow h-100"
                         href=' https://dev-danish-javed.github.io/portfolio_2/' target="blank" rel="noreferrer">
                         Checkout My Portfolio <i class="fa-solid fa-up-right-from-square"></i>
                     </a>
